# wh-tasklist

./: .env  .gitignore  README.md  index.html  netlify.toml  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
client/: package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  types.ts
client/src/pages/: HomePage.tsx  ListPage.tsx
server/: main.py  pyproject.toml
server/app/: __init__.py  config.py
server/app/features/: __init__.py
server/app/features/list/: model.py  routes.py
server/app/features/task/: model.py  routes.py
server/app/templates/: index.jinja  list.jinja
src/: App.tsx  index.css  instrument.ts  main.tsx  print.css  types.ts
src/components/: ErrorBoundary.tsx  SettingsProvider.tsx  SettingsSheet.tsx  ThemeToggle.tsx  list-buttons.tsx  list-cards.tsx  list-filters.tsx  list-header.tsx  list-tasks.tsx  loading-page.tsx  new-task.tsx  settings-sheet.tsx  shared-lists.tsx  your-lists.tsx
src/components/list/: ListCard.tsx  ListHeader.tsx  ListPageProvider.tsx  ListPasswordForm.tsx  ListTasks.tsx  ListTitle.tsx  SharedLists.tsx  TaskItem.tsx  YourLists.tsx
src/components/menus/: list-actions.tsx
src/components/modals/: CreateList.tsx  ListCollaborators.tsx  collaborators.tsx  confirm.tsx  (+2 more)
src/layouts/: AuthPage.tsx  PageWrapper.tsx  RequireAuth.tsx  auth-page.tsx  page-wrapper.tsx  require-auth.tsx
src/lib/: auth.firebase.ts  firebase.ts  hashing.ts  types.ts  utils.ts
src/pages/: ErrorPage.tsx  HomePage.tsx  ListPage.tsx  LoginPage.tsx  RegisterPage.tsx  home.tsx  list.tsx  login.tsx  register.tsx
(+17 files in other folders)
